<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lunacontroller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="keldridge07@gmail.com">kyle</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>std_srvs</exec_depend>

  <build_depend>messages</build_depend>
  <exec_depend>messages</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>

  <!-- Local/workspace packages -->
  <exec_depend>controls</exec_depend>

  <!-- System Python packages resolved by rosdep -->
  <exec_depend>python3-gpiozero</exec_depend>
  <exec_depend>python3-pygame</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
